# cookiecutter-pypackage

./: LICENSE  README.md  cookiecutter.json
{{ cookiecutter.project_name }}/: LICENSE  pyproject.toml  {{ cookiecutter.module_name }}.py
