[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_name }}"
version = "0.0.1"
authors = [
    { name="{{ cookiecutter.full_name }}", email="{{ cookiecutter.email }}" },
]
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
dependencies = [
    #"requests",
    #"tabulate",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    # "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",
]

[project.scripts]
hello-world = "{{ cookiecutter.module_name }}:cli"

[project.urls]
"Homepage" = "{{ cookiecutter.project_homepage }}"
